--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,15 @@ exclude: ["README.md"] # files to exclude
 pygments: true
 safe: false
 
-title: dbyll
-description: Stylish Jekyll Theme
+title: cmotta
+description: Um blog simples
 author:
-  name: dbyll
-  email: dbyll@ismaildemirbilek.com
-  github: dbtek
-  twitter: asd123
-  pinterest: asd123
+  name: Caio Motta
+  email: motta.caio@gmail.com
+  github: cmotta
+  twitter: mottacaio
   linkedin: asd123
-  bio: Your stylish, minimalist theme!
+  bio: Um blog simple
   email_md5: 726351295ec82e145928582f595aa3aa
 
 rss_path: feed.xml
