--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:
   github: cmotta
   twitter: mottacaio
   linkedin: asd123
-  bio: Um blog simple
+  bio: Um blog simples
   email_md5: 726351295ec82e145928582f595aa3aa
 
 rss_path: feed.xml
